--- a/horus/horus-fw.ioc
+++ b/horus/horus-fw.ioc
@@ -192,23 +192,24 @@ Mcu.Pin51=VP_ADC1_Vref_Input
 Mcu.Pin52=VP_FATFS_VS_SDIO
 Mcu.Pin53=VP_RTC_VS_RTC_Activate
 Mcu.Pin54=VP_RTC_VS_RTC_Calendar
-Mcu.Pin55=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin56=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin57=VP_SYS_VS_Systick
-Mcu.Pin58=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin59=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin55=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin56=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin57=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin58=VP_SYS_VS_Systick
+Mcu.Pin59=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin6=PC1
-Mcu.Pin60=VP_TIM4_VS_no_output1
-Mcu.Pin61=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin62=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin63=VP_TIM9_VS_no_output1
-Mcu.Pin64=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin65=VP_TIM11_VS_ClockSourceINT
-Mcu.Pin66=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin60=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin61=VP_TIM4_VS_no_output1
+Mcu.Pin62=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin63=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin64=VP_TIM9_VS_no_output1
+Mcu.Pin65=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin66=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin67=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=67
+Mcu.PinsNb=68
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -226,7 +227,7 @@ NVIC.FPU_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
@@ -346,12 +347,10 @@ PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=DisplayLedPWM
 PB4.Locked=true
-PB4.Signal=S_TIM3_CH1
+PB4.Signal=GPIO_Output
 PB5.Locked=true
-PB5.Signal=EVENTOUT
+PB5.Signal=S_TIM3_CH2
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
@@ -510,7 +509,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true,12-MX_TIM9_Init-TIM9-false-HAL-true,13-MX_USART1_UART_Init-USART1-false-HAL-true,14-MX_USART6_UART_Init-USART6-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true,12-MX_TIM9_Init-TIM9-false-HAL-true,13-MX_USART1_UART_Init-USART1-false-HAL-true,14-MX_USART6_UART_Init-USART6-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,17-MX_TIM10_Init-TIM10-false-HAL-true,18-MX_TIM11_Init-TIM11-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -519,12 +518,13 @@ RCC.APB1TimFreq_Value=84000000
 RCC.APB2Freq_Value=84000000
 RCC.APB2TimFreq_Value=84000000
 RCC.CortexFreq_Value=84000000
+RCC.EnbaleCSS=true
 RCC.FCLKCortexFreq_Value=84000000
 RCC.HCLKFreq_Value=84000000
 RCC.HSE_VALUE=16000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RCC_MCO1Source,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RCC_MCO1Source,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
 RCC.MCO2PinFreq_Value=84000000
@@ -535,7 +535,9 @@ RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
 RCC.RCC_MCO1Source=RCC_MCO1SOURCE_HSE
-RCC.RTCFreq_Value=32000
+RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
+RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
+RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=8000000
 RCC.SYSCLKFreq_VALUE=84000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
@@ -545,8 +547,15 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 RTC.Alarm=RTC_ALARM_A
 RTC.Alarm_B=RTC_ALARM_B
-RTC.IPParameters=PinSelection_1,Alarm,Alarm_B
+RTC.Date=30
+RTC.Hours=15
+RTC.IPParameters=PinSelection_1,Alarm,Alarm_B,StoreOperation,Year,Date,Month,WeekDay,Hours,Minutes
+RTC.Minutes=20
+RTC.Month=RTC_MONTH_JULY
 RTC.PinSelection_1=RTC_TAMPERPIN_DEFAULT
+RTC.StoreOperation=RTC_STOREOPERATION_SET
+RTC.WeekDay=RTC_WEEKDAY_TUESDAY
+RTC.Year=24
 SDIO.ClockPowerSave=SDIO_CLOCK_POWER_SAVE_ENABLE
 SDIO.IPParameters=ClockPowerSave
 SH.ADCx_IN15.0=ADC1_IN15,IN15
@@ -559,8 +568,8 @@ SH.S_TIM10_CH1.0=TIM10_CH1,PWM Generation1 CH1
 SH.S_TIM10_CH1.ConfNb=1
 SH.S_TIM11_CH1.0=TIM11_CH1,PWM Generation1 CH1
 SH.S_TIM11_CH1.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 SPI1.CalculateBaudRate=328.125 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
@@ -576,8 +585,8 @@ TIM11.IPParameters=Channel,Prescaler,Period,AutoReloadPreload
 TIM11.Period=1000
 TIM11.Prescaler=84 - 1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-PWM Generation2 CH2
 TIM3.Period=1000 - 1
 TIM3.Prescaler=84 - 1
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
@@ -603,10 +612,13 @@ USART1.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
 USART6.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_DEBUG_LEVEL,PID_CDC_FS,PRODUCT_STRING_CDC_FS
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_DEBUG_LEVEL,PID_CDC_FS,PRODUCT_STRING_CDC_FS,USBD_MAX_NUM_INTERFACES,USBD_MAX_NUM_CONFIGURATION,MANUFACTURER_STRING
+USB_DEVICE.MANUFACTURER_STRING=VexUF By Aly Badawy
 USB_DEVICE.PID_CDC_FS=61858
 USB_DEVICE.PRODUCT_STRING_CDC_FS=VexUF Horus Serial
 USB_DEVICE.USBD_DEBUG_LEVEL=0
+USB_DEVICE.USBD_MAX_NUM_CONFIGURATION=1
+USB_DEVICE.USBD_MAX_NUM_INTERFACES=1
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode,Sof_enable
@@ -626,6 +638,8 @@ VP_RTC_VS_RTC_Alarm_B_Intern.Mode=Alarm B
 VP_RTC_VS_RTC_Alarm_B_Intern.Signal=RTC_VS_RTC_Alarm_B_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
+VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
+VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
