--- a/horus_fw/fw_src/horus-fw.ioc
+++ b/horus_fw/fw_src/horus-fw.ioc
@@ -38,9 +38,9 @@ Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlign
 Dma.Request0=ADC1
 Dma.Request1=SDIO
 Dma.Request2=USART1_RX
-Dma.Request3=USART1_TX
-Dma.Request4=USART6_RX
-Dma.Request5=USART6_TX
+Dma.Request3=USART6_RX
+Dma.Request4=USART6_TX
+Dma.Request5=USART1_TX
 Dma.RequestsNb=6
 Dma.SDIO.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SDIO.1.FIFOMode=DMA_FIFOMODE_ENABLE
@@ -65,36 +65,36 @@ Dma.USART1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_RX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_RX.2.Priority=DMA_PRIORITY_LOW
 Dma.USART1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_TX.3.Instance=DMA2_Stream7
-Dma.USART1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.3.Mode=DMA_CIRCULAR
-Dma.USART1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART6_RX.4.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART6_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART6_RX.4.Instance=DMA2_Stream1
-Dma.USART6_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART6_RX.4.MemInc=DMA_MINC_ENABLE
-Dma.USART6_RX.4.Mode=DMA_NORMAL
-Dma.USART6_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART6_RX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.USART6_RX.4.Priority=DMA_PRIORITY_LOW
-Dma.USART6_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART6_TX.5.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART6_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART6_TX.5.Instance=DMA2_Stream6
-Dma.USART6_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART6_TX.5.MemInc=DMA_MINC_ENABLE
-Dma.USART6_TX.5.Mode=DMA_CIRCULAR
-Dma.USART6_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART6_TX.5.PeriphInc=DMA_PINC_DISABLE
-Dma.USART6_TX.5.Priority=DMA_PRIORITY_LOW
-Dma.USART6_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.5.Instance=DMA2_Stream7
+Dma.USART1_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.5.Mode=DMA_NORMAL
+Dma.USART1_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART6_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_RX.3.Instance=DMA2_Stream1
+Dma.USART6_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART6_RX.3.Mode=DMA_NORMAL
+Dma.USART6_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART6_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.4.Instance=DMA2_Stream6
+Dma.USART6_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.4.Mode=DMA_CIRCULAR
+Dma.USART6_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FATFS.BSP.number=1
 FATFS.IPParameters=USE_DMA_CODE_SD,_USE_LFN,_USE_LABEL,_USE_EXPAND,_USE_FIND,_MAX_SS,_FS_EXFAT
 FATFS.USE_DMA_CODE_SD=1
@@ -195,7 +195,7 @@ Mcu.Pin54=VP_RTC_VS_RTC_Calendar
 Mcu.Pin55=VP_RTC_VS_RTC_WakeUp_intern
 Mcu.Pin56=VP_RTC_VS_RTC_Alarm_B_Intern
 Mcu.Pin57=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin58=VP_SYS_VS_tim1
+Mcu.Pin58=VP_SYS_VS_Systick
 Mcu.Pin59=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin6=PC1
 Mcu.Pin60=VP_TIM4_VS_ClockSourceINT
@@ -242,8 +242,6 @@ NVIC.TIM1_BRK_TIM9_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TimeBase=TIM1_UP_TIM10_IRQn
-NVIC.TimeBaseIP=TIM1
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -619,7 +617,7 @@ TIM9.OCMode_1=TIM_OCMODE_TOGGLE
 TIM9.Period=10000 - 1
 TIM9.Prescaler=8400 - 1
 TIM9.Pulse-Output\ Compare1\ No\ Output=10000 - 1
-USART1.BaudRate=19200
+USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
@@ -653,8 +651,8 @@ VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
 VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
-VP_SYS_VS_tim1.Mode=TIM1
-VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
