--- a/horus_fw/fw_src/horus-fw.ioc
+++ b/horus_fw/fw_src/horus-fw.ioc
@@ -192,29 +192,29 @@ Mcu.Pin51=VP_ADC1_Vref_Input
 Mcu.Pin52=VP_FATFS_VS_SDIO
 Mcu.Pin53=VP_RTC_VS_RTC_Activate
 Mcu.Pin54=VP_RTC_VS_RTC_Calendar
-Mcu.Pin55=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin56=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin57=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin58=VP_SYS_VS_Systick
-Mcu.Pin59=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin55=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin56=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin57=VP_SYS_VS_tim1
+Mcu.Pin58=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin59=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin6=PC1
-Mcu.Pin60=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin61=VP_TIM4_VS_no_output1
-Mcu.Pin62=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin63=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin64=VP_TIM9_VS_no_output1
-Mcu.Pin65=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin66=VP_TIM11_VS_ClockSourceINT
-Mcu.Pin67=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin60=VP_TIM4_VS_no_output1
+Mcu.Pin61=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin62=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin63=VP_TIM9_VS_no_output1
+Mcu.Pin64=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin65=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin66=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=68
+Mcu.PinsNb=67
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
+NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -227,7 +227,7 @@ NVIC.FPU_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
@@ -242,6 +242,8 @@ NVIC.TIM1_BRK_TIM9_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TimeBase=TIM1_UP_TIM10_IRQn
+NVIC.TimeBaseIP=TIM1
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -525,13 +527,12 @@ RCC.APB1TimFreq_Value=84000000
 RCC.APB2Freq_Value=84000000
 RCC.APB2TimFreq_Value=84000000
 RCC.CortexFreq_Value=84000000
-RCC.EnbaleCSS=true
 RCC.FCLKCortexFreq_Value=84000000
 RCC.HCLKFreq_Value=84000000
 RCC.HSE_VALUE=16000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RCC_MCO1Source,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RCC_MCO1Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
 RCC.MCO2PinFreq_Value=84000000
@@ -542,7 +543,6 @@ RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
 RCC.RCC_MCO1Source=RCC_MCO1SOURCE_HSE
-RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=8000000
@@ -555,8 +555,9 @@ RCC.VcooutputI2S=192000000
 RTC.Alarm=RTC_ALARM_A
 RTC.Alarm_B=RTC_ALARM_B
 RTC.Date=30
+RTC.Format=RTC_FORMAT_BIN
 RTC.Hours=15
-RTC.IPParameters=PinSelection_1,Alarm,Alarm_B,StoreOperation,Year,Date,Month,WeekDay,Hours,Minutes
+RTC.IPParameters=PinSelection_1,Alarm,Alarm_B,StoreOperation,Year,Date,Month,WeekDay,Hours,Minutes,Format
 RTC.Minutes=20
 RTC.Month=RTC_MONTH_JULY
 RTC.PinSelection_1=RTC_TAMPERPIN_DEFAULT
@@ -649,10 +650,8 @@ VP_RTC_VS_RTC_Alarm_B_Intern.Mode=Alarm B
 VP_RTC_VS_RTC_Alarm_B_Intern.Signal=RTC_VS_RTC_Alarm_B_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
-VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
-VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim1.Mode=TIM1
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
